# versa

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Aerith_Ult.code-workspace  Dockerfile  Notes.md  Possible_Future_Fixes.md  README.md  copy.txt  docker-compose.qdrant.yaml  docker-compose.yml  eslint.config.js  implementation-notes.txt  main.py  main_original.py  orchestrator_feedback.patch  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-voice.txt  requirements.txt  run.py  runbook.md  to-do.txt  tsconfig.base.json  ultron.db  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/ai/: README.md  package.json
apps/core/: package.json
apps/mcp-gateway/: package.json
apps/web/: package.json  tsconfig.json
base/: __init__.py
base/agents/: apply_orchestrator_feedback.py  dream.py  orchestrator.py  orchestrator.py.bak  orchestrator1.py  orchestrator2.py  scheduler.py
base/apps/: calendar_prompts.py  email_prompts.py  file_manager_prompts.py  media_smart_home_prompts.py
base/calendar/: calendar.py  calendar_flow.py  rrule_helpers.py  store.py
base/core/: audio.py  commands.py  context.py  core.py  decider.py  memory.py  mode_classifier.py  nlu.py  plugin_manager.py  profile.py  profile_manager.py  stylizer.py
base/database/: sqlite.py
base/devices/: home_assistant.py
base/devops/: git_client.py
base/embeddings/: provider.py
base/io/: interface.py  notifier.py  run_voice.py  stream_loop.py  text_loop.py  voice.py  voice_loop.py
base/kg/: entities.py  extract.py  integration.py  models.py  relations.py  store.py
base/learning/: dream_cycle.py  engagement_manager.py  feedback.py  habit_miner.py  habits.py  mood_engine.py  persona_primer.py  policy_store.py  profile_enrichment.py  review.py  self_improve_runner.py  sentiment.py  usage_log.py
base/llm/: brain.py  brain_v2.py  prompt_composer.py  prompts.py  retriever.py
base/memory/: consolidation.py  decider.py  faiss_backend.py  milvus_backend.py  models.py  recall.py  retrieval.py  scoring.py  store.py  store1.py  vector_backend.py  weaviate_backend.py
base/personality/: policy.py  tone_adapter.py
base/plugins/: __init__.py  email_flow.py  email_flow_original.py  file_manager.py  gmail.py  media_smart_home.py  system.py  time_plugin.py
base/policy/: audit_reader.py  consequence_linker.py  context_manager.py  context_signals.py  feedback.py  feedback_classifier.py  policy_store.py  rule_engine.py  self_improve.py  tone_memory.py  topic_manager.py
base/repl/: commands.py  nl_commands.py
base/self_improve/: code_indexer.py  diagnostic_engine.py  models.py  pr_manager.py  proposal_engine.py
base/tools/: simulate_sqlite2.py
base/utils/: embeddings.py  timeparse.py  ultron_status.py
base/voice/: FastAPI.py  tts_elevenlabs.py  tts_ultron.py
cli/: review_cli.py
config/: config.py  self_improvements.py  user_profile.json
docs/: INSTALL.md  local-dev-startup.md  repo-structure.md  troubleshooting.md
docs/adrs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  README.md
docs/architecture/: overview.md
docs/checklists/: phase-0.md
docs/orchestrator/: ws21-ultron-happy-path-e2e.md
docs/redesign/: architecture-baseline.md  ws01-config-governance.md  ws02-telemetry-foundation.md  ws03-identity-doctrine.md  ws04-memory-gateway.md  ws05-workspace-state.md  ws06-skills-engine.md  ws07-environment-twin.md  ws08-approvals-trust-ladder.md  ws09-mcp-gateway.md  ws10-ai-convergence-bridge.md  ws11-operator-console.md  ws12-rollout-hardening.md  ws13-github-issue-intake.md  ws16-sandbox-execution-prep.md  ws17-roo-dispatch-result-ingestion.md  ws18-result-summary-pr-packet.md  ws19-post-run-workspace-memory-update.md  ws20-blocker-followup-issues.md
docs/roadmap/: phase-roadmap.md
docs/task-cards/: README - Copy.md  README.md
docs/templates/: agent-execution-handoff.md  agent-task-card.md  codex-task-card-handoff.md  legacy_codex-task-card-handoff.md  roo-handoff.md
dotenv/: __init__.py
keys/: ultron-bot-gpg.key  ultron-bot-ssh.key
legacy/: self_improvements_old.py  vector_backend copy.py
legacy/docs/: setup_guide.md
legacy/requirements/: pyproject_old.toml  requirements-dev_old.txt  requirements_old.txt
personalities/: __init__.py  loader.py
personalities/jarvis/: default.json  lines.py  loader.py  plugin_lines.json
personalities/ultron/: formal.json  lines.py
research/: claude_watch.py  claude_watch_agent.py
scripts/: bootstrap.ps1  bootstrap.sh  diagnostic_scan.py  dry_flywheel.py  refresh_token_google.py  repair_branch.py  repair_changed_files.py  seed_rules.py  verify_quality.py
src/base/: __init__.py
src/cli/: cli.py  review_cli.py
src/config/: config.py  engagement_rules.yaml  self_improvements.py
src/personalities/: __init__.py  loader.py
src/ultron_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: config_files.csv  conftest.py  conn_wrap.py  db_ops.py  files_by_size.csv  flywheel_dry_run.txt  grep_hits.csv  memory_test.py  missing_inits.csv  python_compile_errors.csv  style_issues.csv  summary.json  test_prompt_composer.py  test_retriever.py  test_scoring.py  test_store.py  types.py
tests/database/: conftest.py  schema_contract.py  test_connection.py  test_foreign_keys.py  test_fts.py  test_locking_and_retries.py  test_migrations.py  test_migrations_tracking.py  test_pragmas_and_constraints.py  test_schema_contract.py  test_self_improve_migration.py  test_self_improve_schema_contract.py  test_transactions.py
tests/learning/: test_habit_miner.py
tests/memory/: conftest.py  test_diagnostics_roundtrip.py  test_events_fts_triggers.py  test_search_filters.py  test_vector_backend_export.py
tests/quality/: test_runner.py
tests/scheduler/: test_scheduler_daily_jobs.py  test_scheduler_interval_tasks.py  test_scheduler_run_periodic.py  test_scheduler_start_stop.py
tests/self_improve/: test_dream_commands.py  test_iteration_controller_semantics.py  (+1 more)
(+205 files in other folders)
