[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerith-mvp"
version = "0.1.0"
description = "Aerith MVP: modular assistant with SQLite memory and retrieval"
requires-python = ">=3.10"

dependencies = [
  # Core runtime
  "apscheduler==3.10.4",
  "colorama>=0.4.6",
  "dateparser>=1.1.0,<1.2.0",
  "defusedxml",
  "faiss-cpu>=1.7.4",
  "loguru>=0.7.2",
  "nodejs",
  "npm",
  "psutil",
  "pydantic>=2.11.9",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.1.1",
  "requests>=2.32.0",
  "rich>=13.7.1",
  "setuptools<82",
  "tqdm",
  "click",

  # DB / retrieval
  "qdrant-client>=1.7.0",
  "sqlite-utils",

  # LLM / HTTP
  "httpx>=0.28.0",
  "openai>=1,<2",

  # Embeddings / NLP
  "numpy>=1.26",
  "sentence-transformers>=3.0.0",
  "spacy>=3.7.2,<3.8.0",
  "textblob>=0.18.0.post0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

[project.optional-dependencies]
api = [
  "fastapi",
  "uvicorn",
]

google = [
  "google-api-python-client>=2.120.0",
  "google-auth>=2.30.0",
  "google-auth-httplib2",
  "google-auth-oauthlib>=1.2.0",
]

dev = [
  "pytest>=7.4",
  "pytest-asyncio",
  "pytest-xdist",
  "pytest-cov",
  "pytest-timeout",
  "pytest-randomly",
  "hypothesis",
  "ruff>=0.5.0",
  "black>=24.0",
  "pyright[nodejs]>=1.1.408",
]

voice = [
  "playsound==1.2.2",
  "sounddevice>=0.5",
  "soundfile>=0.13.1",
  "simpleaudio",
  "elevenlabs>=1.0.0",
  "TTS; python_version < '3.12'",
  "openai-whisper==20231117; python_version < '3.12'",
  "faster-whisper>=1.1.0; python_version >= '3.12'",
  "imageio-ffmpeg",
  "pvporcupine>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"base.database" = ["migrations/*.sql"]
"config" = ["*.yaml", "*.json"]
"personalities" = ["**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["base*", "cli*", "config*", "personalities*"]
exclude = ["tests*", "scripts*", "aerith-desktop*", "keys*"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '(^\.git/|^\.venv/|^__pycache__/|^aerith\.db$)'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "aerith.db"]

[tool.ruff.lint]
select = ["E","F","W","I","B","UP","SIM","PL"]
# ignore = ["E402", "E501", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLW0603", "SIM105", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"src/base/agents/orchestrator.py" = ["PLR0911"]
"src/base/devops/git_client.py" = ["UP022"]
"src/base/learning/habit_miner.py" = ["PLR2004"]
"src/base/llm/prompt_composer.py" = ["E741"]
"src/base/plugins/gmail.py" = ["PLW0602"]
"src/base/plugins/media_smart_home.py" = ["PLW0602"]
"src/base/self_improve/iteration_controller.py" = ["F821"]
"src/base/self_improve/proposal_engine.py" = ["E741"]
"src/base/self_improve/service.py" = ["PLC0415"]

[tool.pytest.ini_options]
addopts = "-ra --randomly-seed=1 --randomly-dont-reset-seed"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: fast unit tests",
  "integration: tests touching multiple subsystems",
  "slow: intentionally slower tests"
]

filterwarnings = [
  "ignore:Api key is used with an insecure connection\\.:UserWarning:base\\.memory\\.vector_backend",
  "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
